k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeseal-ui
  namespace: sealed-secrets
  labels:
    app: kubeseal-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeseal-ui
  template:
    metadata:
      labels:
        app: kubeseal-ui
    spec:
      containers:
        - name: kubeseal-ui
          image: ghcr.io/kuvi-99/kubeseal-ui:1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
