k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeseal-ui
  namespace: sealed-secrets
  labels:
    app: kubeseal-ui
spec:
  selector:
    app: kubeseal-ui
  ports:
    - port: 80
      targetPort: 8080
